--- a/afk_journey_pvp_rankings.html
+++ b/afk_journey_pvp_rankings.html
@@ -4,6 +4,12 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta property="og:title" content="AFK Journey PVP Rankings">
+    <meta property="og:description" content="AFK JourneyのPVPランキング。">
+    <meta property="og:image" content="https://joapippa.github.io/afkj/afk_journey_thumbnail.png">
+    <meta property="og:url" content="https://joapippa.github.io/afkj/afk_journey_pvp_rankings.html">
+    <meta property="og:type" content="website">
+
     <title>AFK Journey S3 PVPティアリスト by 髭おじ</title>
     <style>
         body {
