--- a/afk_journey_s5_charm_bonus.html
+++ b/afk_journey_s5_charm_bonus.html
@@ -124,6 +124,9 @@
     .credit-box p { margin: 8px 0 0; font-size: 14px; color: var(--text); }
     .credit-image img, .youtube-thumb img { max-width: 100%; border-radius: 8px; margin-top: 12px; }
 
+
+    .season-image img { max-width: 100%; border-radius: 12px; margin-top: 12px; }
+
 </style>
 
 </head>
@@ -314,7 +317,15 @@
         </a>
       </div>
     </div>
+  
+  <div class="credit-box" id="credit-image">
+    <h2>Season Visual</h2>
+    <div class="season-image">
+      <img src="76e43575-601f-4ed5-8b4a-a374ac59031e.png" alt="Season Visual">
+    </div>
   </div>
+
+</div>
 
 </body>
 </html>
