--- a/afk_journey_s5_charm_bonus.html
+++ b/afk_journey_s5_charm_bonus.html
@@ -18,7 +18,6 @@
 
     /* 長文列（効果テキスト / 英雄 / ヒゲおじ評価）は必要に応じてのみ折り返し */
     th:nth-child(3), td:nth-child(3),
-    th:nth-child(4), td:nth-child(4),
     th:nth-child(5), td:nth-child(5) {
       overflow-wrap: anywhere; word-break: break-word;
     }
@@ -29,6 +28,40 @@
       .table-wrap > table { min-width: 1200px; } /* PC相当の横幅を維持 */
       table { table-layout: fixed !important; }
       thead th { position: static; } /* Safariの飛びを防止 */
+    }
+
+
+    /* === Fix: 英雄列の不自然な改行を防ぐ === */
+    /* 英雄列は単語内改行を禁止し、基本は改行しない */
+    th:nth-child(4), td:nth-child(4) {
+      white-space: nowrap;
+      word-break: keep-all;
+      overflow-wrap: normal;
+      hyphens: manual;
+    }
+    /* 英雄名のリストをインライン化（区切り記号を自動付与） */
+    td:nth-child(4) ul {
+      display: inline-flex;
+      flex-wrap: nowrap;
+      gap: 8px;
+      padding: 0;
+      margin: 0;
+      list-style: none;
+      vertical-align: middle;
+    }
+    td:nth-child(4) ul li {
+      display: inline;
+      white-space: nowrap;
+    }
+    td:nth-child(4) ul li + li::before {
+      content: "、";
+      margin-right: 4px;
+    }
+
+    /* 既存の「長文列は折り返し」設定から英雄列(4)を除外 */
+    th:nth-child(3), td:nth-child(3),
+    th:nth-child(5), td:nth-child(5) {
+      overflow-wrap: anywhere; word-break: break-word;
     }
 
 </style>
