--- a/afk_journey_s5_charm_bonus.html
+++ b/afk_journey_s5_charm_bonus.html
@@ -4,6 +4,17 @@
   <meta name="viewport" content="width=device-width, initial-scale=1, viewport-fit=cover">
   <meta name="apple-mobile-web-app-capable" content="yes">
   <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
+
+  <meta property="og:title" content="AFK Journey Season 5 Hero Charms Breakdown"> 
+  <meta property="og:description" content="S5魔法アクセ情報"> 
+  <meta property="og:type" content="website">
+  <meta property="og:url" content="https://joapippa.github.io/afkj/afk_journey_s5_charm_bonus.html"> 
+  <meta property="og:image" content="https://joapippa.github.io/afkj/afk_journey_s5_charm_bonus_thumbnail.png">
+  <meta property="og:image:width" content="1200">
+  <meta property="og:image:height" content="630">
+  <!-- 任意だけど有益 -->
+  <meta name="twitter:card" content="summary_large_image">
+
   <style>html{-webkit-text-size-adjust:100%;}
     /* === Preserve desktop-like column widths on mobile (no forced wrap) === */
     /* 全体では無理な単語分割をしない */
